# gkom

./: .gitignore  README.md
src/: CMakeLists.txt  ColouredVertMesh.cpp  ICamera.h  IMesh.cpp  IMesh.h  IRenderer.h  Logger.h  Mesh.cpp  Mesh.h  MeshConfig.cpp  MeshConfig.h  Movable.cpp  Movable.h  Node.cpp  Node.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PlaneGenerator.cpp  PlaneGenerator.h  RendererOGL.cpp  RendererOGL.h  SkyboxTechnique.cpp  Technique.cpp  Texture.cpp  Texture.h  TexturedSkybox.cpp  TexturedSkybox.h  Trajectory.cpp  Trajectory.h  UniformColouredMesh.cpp  UniformColouredMesh.h  Utils.cpp  Utils.h  main.cpp  normal.txt  typedefs.h
src/Generator/: NormalGenerator.cpp  NormalGenerator.h  PlaneGenerator.cpp  PlaneGenerator.h  PolyhedronGenerator.cpp  PolyhedronGenerator.h  PrimitiveFactory.cpp  PrimitiveFactory.h
src/Graphics/: Graphics.cpp  Graphics.h  Mesh.cpp  Mesh.h
src/Mesh/: BasicMesh.cpp  BasicMesh.h  Box.cpp  Box.h  ColouredVertMesh.h  IMesh.cpp  IMesh.h  IndexedMesh.cpp  IndexedMesh.h  MeshConfig.cpp  MeshConfig.h  PrimitiveFactory.cpp  PrimitiveFactory.h  SkyboxMesh.cpp  SkyboxMesh.h  SpaceShip.cpp  SpaceShip.h  TexturedIndexedMesh.cpp  TexturedIndexedMesh.h  TexturedSkybox.cpp  TexturedSkybox.h  UniformColouredMesh.cpp  UniformColouredMesh.h
src/Technique/: SkyboxTechnique.cpp  SkyboxTechnique.h  Technique.cpp  Technique.h  TexturedTechnique.cpp  TexturedTechnique.h
src/TextureTut/: tutorial16.cpp
src/data/: matrix.col  matrix.vert  matrix3.col  matrix3.vert  plane.norm  plane.vert  test.vert
src/glfw/: CMakeLists.txt
src/include/: Node.h  PerspectiveCamera.h  RendererOGL.h  SkyboxTechnique.h  Technique.h  Texture.h  TexturedSkybox.h  UniformColouredMesh.h
src/shaders/: ambient_is_diffuse_vs.glsl  colours3_fs.glsl  colours_fs.glsl  fixed_col_vs.glsl  light_vs.glsl  matrix_vs.glsl  no_col_matrix_vs.glsl  skybox.fs  skybox.vs  test.vs  test2.vs  texture2d.fs  texture2d.vs  unif_colour_matrix_vs.glsl  unif_colours_fs.glsl
src/tuts/Test/: test.cpp
src/tuts/Tut 01 Hello Triangle/: tut1.cpp
src/tuts/Tut 02 Playing with Colors/: FragPosition.cpp  VertexColors.cpp
src/tuts/Tut 04 Objects at Rest/: AspectRatio.cpp
src/tuts/Tut 05 Objects in Depth/: DepthBuffer.cpp  VertexClipping.cpp
src/tuts/Tut 06 Objects in Motion/: Translation.cpp
src/tuts/Tut 08 Getting Oriented/: CameraRelative.cpp  QuaternionYPR.cpp
src/tuts/Tut 09 Lights on/: Scale and Lighting.cpp
src/tuts/Tut 10 Plane Lights/: Fragment Attenuation.cpp  Vertex Point Lighting.cpp
src/tuts/Tut 11 Shinies/: Blinn vs Phong Lighting.cpp
src/tuts/Tut 12 Dynamic Range/: Gamma Correction.cpp  HDR Lighting.cpp  Lights.h  Scene Lighting.cpp  Scene.cpp
src/tuts/Tut 13 Impostors/: BasicImpostor.cpp
src/tuts/Tut 14 Textures Are Not Pictures/: Basic Texture.cpp  Material Texture.cpp  Perspective Interpolation.cpp
src/tuts/Tut 16 Gamma and Textures/: Gamma Checkers.cpp  Gamma Landscape.cpp
src/tuts/Tut 17 Spotlight on Textures/: Cube Point Light.cpp  Double Projection.cpp
src/tuts/framework/: Mesh.cpp  Scene.cpp  UniformBlockArray.h  directories.h  framework.h
tuts/Test/: scenegraph.cpp
tuts/Tut 03 OpenGLs Moving Triangle/: cpuPositionOffset.cpp  (+3 more)
(+35 files in other folders)
